# s3deck

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  build-cross-platform.sh  dev.sh  index.html  install.sh  package-lock.json  package.json
.github/: WORKFLOW_GUIDE.md  dependabot.yml
.github/workflows/: build-and-release.yml  ci.yml  release.yml  tag-release.yml
scripts/: check-changelog-pr.cjs  check-version-consistency.cjs  ci-pr-handler.cjs  ci-test-runner.cjs  ci-utils.cjs  ci-version-check.cjs  fix-macos-bundle.sh  generate-pr-summary.cjs  generate-release-notes.cjs  github-pr-comment.cjs  github-status-check.cjs  github-utils.cjs  version-manager.cjs
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/go-backend/: .air.toml  README.md  build.bat  build.cjs  build.sh  config.go  go.mod  go.sum  handlers.go  main.go  models.go  s3client.go  utils.go
src-tauri/icons/: icon.icns
src-tauri/src/: aws_profiles.rs  commands.rs  config.rs  content_type.rs  lib.rs  main.rs  models.rs  s3_client.rs
src/components/: AddBucketModal.jsx  AppContent.jsx  BucketsTable.jsx  ConfigView.jsx  ContextMenu.jsx  CreateFolderModal.jsx  DeleteConfirmModal.jsx  Header.jsx  ObjectsTable.jsx  PropertiesModal.jsx  RenameModal.jsx  SearchableDropdown.jsx  Sidebar.jsx
src/contexts/: SettingsContext.jsx
src/hooks/: useAutoRefresh.js  useAwsProfiles.js  useModals.js  useNavigation.js  useNotifications.js  useS3Operations.js  useTheme.js  useUpload.js
src/utils/: debug.js  errorUtils.js  formatters.js
(+40 files in other folders)
