[package]
name = "s3deck"
version = "0.2.0"
description = "A S3 Deck application"
authors = ["Aleksander Dudek"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "s3deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AWS S3 SDK
aws-sdk-s3 = "1"
aws-config = "1"
aws-types = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"

# Error handling
anyhow = "1"
thiserror = "2"

# MIME type detection
mime_guess = "2"

# URL encoding/decoding for S3 operations
urlencoding = "2"
